Fixed input issue on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,8 @@ input:focus,
 }
 
 input[type=text] {
-    display: block;
+    box-sizing: border-box;
+    display: inline-block;
     width: 100%;
     height: 1.5em;
     border-radius: 3px;
@@ -226,16 +227,7 @@ input[type=text] {
     color: #f9f9f9;
     background: #db0000;
     outline: none;
-    /*background: -moz-linear-gradient(top,  #ff635a 0%, #d20b00 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff635a), color-stop(100%,#d20b00));
-    background: -webkit-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
-    background: -o-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
-    background: -ms-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
-    background: linear-gradient(to bottom,  #ff635a 0%,#d20b00 100%);
-    */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff635a', endColorstr='#d20b00',GradientType=0 );
-    -webkit-transition: box-shadow 0.1s;
-    -moz-transition: box-shadow 0.1s;
+    transition: box-shadow 0.1s;
 }
 
 .button:hover,
@@ -247,14 +239,6 @@ input[type=text] {
 .button:active {
     box-shadow: inset 0 2px 10px rgba(0,0,0,0.5);
     background: #c31006;
-    /*background: -moz-linear-gradient(top,  #c31006 0%, #d20b00 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c31006), color-stop(100%,#d20b00));
-    background: -webkit-linear-gradient(top,  #c31006 0%,#d20b00 100%);
-    background: -o-linear-gradient(top,  #c31006 0%,#d20b00 100%);
-    background: -ms-linear-gradient(top,  #c31006 0%,#d20b00 100%);
-    background: linear-gradient(to bottom,  #c31006 0%,#d20b00 100%);
-    */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c31006', endColorstr='#d20b00',GradientType=0 );
 }
 
 .button:focus {
